fix height overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,11 +11,12 @@
   }
 
   & > header {
-    flex: 0 0 61.8%;
+    flex: 0 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 320px;
+    min-height: 61.8vh;
+    padding: 6.18vh 0;
 
     & .logo {
       display: block;
